# phrase-database-cli

./: .gitignore  Pipfile  README.md  config.yaml  main.py  pyproject.toml
jot/: config.py  config_schema.py  controller.py  main.py  tui.py  utils.py
